<resources>
    <string name="app_name">Nitt Warden</string>
    <string name="title_activity_splash_screen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_leave_request">Leave Request</string>
    <string name="menu_mess_menu">Mess Menu</string>
    <string name="menu_mess_rating">Mess Rating</string>
    <string name="menu_feedBack">FeedBack</string>
    <string name="menu_report">Mess Report</string>
    <string name="todo">Todo</string>

    <string name="over_all">Over all</string>
    <string name="food">Food</string>
    <string name="quantity">Quantity</string>
    <string name="food_on_time">Food On Time</string>
    <string name="service">Service</string>
    <string name="cleanliness">Cleanliness</string>

    <string name="action_Logout">Logout</string>
    <string name="action_search">Search</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="web_mail_id">Web Mail Id</string>
    <string name="send_verification_link">Send Verification Link</string>
    <string name="send_password_link">Send Password Link</string>
    <string name="enter_web_mail_id">Enter Web Mail Id</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="register_now">Register Now</string>
    <string name="resend_verification_link">Resend Verification Link</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_link">Send Link</string>


</resources>