<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:background="#fff"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/todo" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_below="@id/imageView3"
            app:startIconDrawable="@drawable/ic_email"
            android:layout_margin="25dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_web_mail_id"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_lock"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_below="@id/editTextEmail"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/buttonForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/editTextPassword"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        android:textColor="#001587"
        android:textSize="15sp"
        android:text="@string/forget_password"
        />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/capsule"
        android:indeterminateTint="#FFF"
        android:layout_below="@id/editTextPassword"
        android:elevation="5dp"
        android:visibility="gone"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="150dp"
        android:layout_below="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_height="50dp"
        android:background="@drawable/capsule"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:textColor="#FFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:textColor="#001587"
        android:textSize="15sp"
        android:text="@string/register_now"
        />
    <TextView
        android:id="@+id/buttonVerifyLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:padding="10dp"
        android:textColor="#001587"
        android:textSize="15sp"
        android:text="@string/resend_verification_link"
        />

</RelativeLayout>