<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/UserProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_person"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/todo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_email"
        android:layout_margin="10dp"
        android:layout_below="@id/UserProfile">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_web_mail_id"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:startIconDrawable="@drawable/ic_lock"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_below="@id/editTextEmail"
        app:passwordToggleEnabled="true">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegister"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/editTextPassword"
        android:text="@string/register"
        android:background="@drawable/capsule"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/editTextPassword"
        android:layout_gravity="center"
        android:elevation="5dp"
        android:visibility="gone"
        android:indeterminateTint="#FFF"
        android:background="@drawable/capsule"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>

</RelativeLayout>